# realm

./: .gitignore  ARCHITECTURE.drawio  BSL-1.1  CHANGELOG.md  CONSTRUCTOR_FIX_APPLIED.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  LOADMODEL_ISSUE_EXPLAINED.md  Makefile  README.md  STATUS.md  SUMMARY.md  deny.toml  docker-compose.yml
.cargo/: audit.toml
.github/workflows/: ci.yml  gpu-tests.yml  paris-regression.yml  pr-benchmark.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/realm-compute-cpu/: Cargo.toml
crates/realm-compute-cpu/benches/: fused_kernels.rs  gemm.rs
crates/realm-compute-cpu/src/: candle_backend.rs  candle_cpu_backend.rs  candle_neural_ops_backend.rs  cpu_backend_trait.rs  fused.rs  gemm.rs  kernels.rs  lib.rs  naive_backend.rs
crates/realm-compute-gpu/: Cargo.toml
crates/realm-compute-gpu/src/: advanced_features_integration.rs  backend.rs  candle_backend.rs  distributed.rs  fused_kernels.rs  gpu_backend_trait.rs  lib.rs  mixed_precision.rs  q4k.wgsl  q5k.wgsl  q6k.wgsl  q8k.wgsl
crates/realm-compute-gpu/tests/: gpu_integration.rs  webgpu_dequant_tests.rs
crates/realm-core/: Cargo.toml
crates/realm-core/src/: memory.rs  quant.rs  tensor.rs  tensor_loader.rs  tokenizer.rs
crates/realm-core/src/formats/: gguf.rs
crates/realm-metrics/: Cargo.toml  TEST_COVERAGE.md
crates/realm-metrics/src/: business.rs  collector.rs  latency.rs  lib.rs  quality.rs  resource.rs  throughput.rs  types.rs  usage.rs
crates/realm-metrics/src/export/: mod.rs  opentelemetry.rs  prometheus.rs
crates/realm-metrics/tests/: integration_tests.rs
crates/realm-models/: Cargo.toml
crates/realm-models/benches/: attention.rs
crates/realm-models/src/: attention.rs  attention_standard.rs  config.rs  ffn.rs  kv_cache.rs  layer.rs  lib.rs  lora_helper.rs  matmul_dispatch.rs  mod.rs  model.rs  registry.rs  sampling.rs  weight_format.rs
crates/realm-models/src/attention/: flash.rs  standard.rs
crates/realm-models/src/attention_stub/: mod.rs
crates/realm-node/: Cargo.toml  build.rs  build.sh  index.d.ts  index.js  package.json
crates/realm-node/src/: lib.rs
crates/realm-runtime/: Cargo.toml
crates/realm-runtime/src/: abi.rs  async_prefetch.rs  batch_forward.rs  batching.rs  chat.rs  context.rs  host_functions.rs  inference.rs  kv_cache_storage.rs  lib.rs  lora.rs  lora_integration.rs  matmul_dispatch.rs  memory.rs  memory64.rs  memory64_ffi.rs  memory64_gguf.rs  memory64_host.rs  memory64_host_tests.rs  memory64_layer_manager.rs  memory64_model.rs  model_storage.rs  multi_memory.rs  sampling.rs  sharding.rs  speculative.rs  streaming.rs  tensor_loader_ext.rs  web.rs  weight_format.rs
crates/realm-runtime/src/attention/: config.rs  cuda_wrapper.rs  flash.rs  metal_wrapper.rs  mod.rs  standard.rs
crates/realm-runtime/tests/: host_storage_integration.rs  integration_frameworks.rs
crates/realm-server/: Cargo.toml  README.md
crates/realm-server/src/: auth.rs  dispatcher.rs  http.rs  integration_helpers.rs  lib.rs  metrics_server.rs  orchestrator.rs  pipeline_dsl.rs  protocol.rs  rate_limiter.rs  runtime_manager.rs  speculative_integration.rs  tokenization_helpers.rs  websocket.rs
crates/realm-server/tests/: integration.rs  load_tests.rs
crates/realm-wasm/: Cargo.toml  README.md  WASM_LIMITATIONS.md  paris-test.js  test-bindings.js
crates/realm-wasm/.cargo/: config.toml
crates/realm-wasm/src/: lib.rs
crates/realm-wasm/tests/: generation_tests.rs  host_function_mocks.rs
desktop/tauri-app/: README.md
docs/: ACTION_PLAN.md  ACTION_PLAN_PRE_GPU.md  ADVANCED_GPU_FEATURES.md  ADVANCED_GPU_FEATURES_COMPLETE.md  ALL_INTEGRATIONS_COMPLETE.md  ALL_UNWRAP_FIXES_COMPLETE.md  ARCHITECTURE.md  ARCHITECTURE_BACKENDS.md  ARCHITECTURE_CLARIFICATION.md  ARCHITECTURE_DEEP_ANALYSIS.md  ARCHITECTURE_EXPORT_INSTRUCTIONS.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_WEBSOCKET_RUNTIME.md  BACKEND_SELECTION.md  BATCH_FORWARD_PASS.md  BUSINESS_METRICS.md  CI_FIXES.md  CI_SECURITY_FIXES.md  COMMIT_READINESS.md  COMPLETE_IMPLEMENTATION_STATUS.md  COMPLETE_STATUS.md  COMPLETE_STATUS_REPORT.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_REVIEW.md  COMPREHENSIVE_REVIEW_2025.md  CPU_BACKEND_COMPLETE.md  CPU_BACKEND_FINAL_VERIFICATION.md  CPU_BACKEND_PRODUCTION_READY.md  CURRENT_STATUS.md  DEPLOYMENT.md  E2E_TESTS_COMPLETE.md  EMBEDDING_MODEL.md  ENHANCEMENTS_STATUS.md  EXAMPLES_ORGANIZATION_PLAN.md  EXTRACTION_PLAN.md  EXTRACTION_START.md  FEATURE_COMPLETE.md  FEATURE_COMPLETION_PLAN.md  FINAL_INTEGRATION_REPORT.md  FINAL_INTEGRATION_STATUS.md  (+99 more)
e2e/: README.md  package.json  test-batching.js  test-lora.js  test-paris.js  test-runner.js  test-speculative.js
examples/: js-sdk-test.js
examples/end-to-end-inference/: Cargo.toml
examples/lora-demo/: Cargo.toml  README.md
examples/lora-demo/src/: main.rs
examples/memory64-demo/: Cargo.toml
examples/memory64-demo/src/: main.rs
examples/multi-tenant/: Cargo.toml
examples/multi-tenant/src/: main.rs
examples/paris-generation/: Cargo.toml  README.md  debug_tokens.patch
examples/paris-generation/js/: README.md
examples/paris-generation/src/: main.rs
examples/paris/native/: Cargo.toml  README.md
examples/paris/native-temp/: Cargo.toml
examples/paris/native-temp/js/: index.js  package.json
examples/paris/native-temp/src/: main.rs
examples/paris/native/src/: main.rs
examples/simple-realm-test/: Cargo.toml
examples/simple-realm-test/src/: main.rs
examples/test-gpu-features/: Cargo.toml  main.rs
examples/test-webgpu/: Cargo.toml  main.rs
examples/wasm-host-runner/: Cargo.toml
examples/wasm-host-runner/src/: main.rs
infrastructure/: README.md
logos/: README.md
scripts/: WASM_GUIDE.md  build-sdk.sh  build-wasm-bindings.sh  run-paris-test.sh  test-full-integration.sh  test-paris-final.sh  test-paris-integration.sh  test-paris-js.js  test-paris-simple.sh  test-paris-wasm.js  test-sdk-simple.sh  test-wasm-paris.sh  test-wasm.sh  verify_cpu_backend.sh  verify_production.sh
sdks/: README.md  SDK_COMPLETENESS_CHECK.md
tests/: README.md  integration_test.rs
(+112 files in other folders)
