[package]
name = "realm-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line interface for Realm.ai"

[[bin]]
name = "realm"
path = "src/main.rs"

[features]
default = []
memory64 = ["realm-runtime/memory64"]
cuda = ["realm-runtime/cuda", "realm-models/cuda"]
metal = ["realm-runtime/metal", "realm-models/metal"]
webgpu = ["realm-runtime/webgpu", "realm-models/webgpu"]

[dependencies]
realm-core = { workspace = true }
realm-models = { workspace = true, features = ["download"] }
realm-runtime = { workspace = true, features = ["memory64-host"] }
realm-server = { workspace = true }
clap = { version = "4.5", features = ["derive", "cargo"] }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = "0.17"
colored = "2.1"
dirs = "5.0"
chrono = "0.4"
