[package]
name = "realm-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Model architectures for Realm.ai (Transformer, Attention, FFN)"

[features]
default = []
cuda = ["realm-compute-gpu/cuda"]
metal = ["realm-compute-gpu/metal"]
webgpu = ["realm-compute-gpu/webgpu"]
memory64 = []

[dependencies]
realm-core = { workspace = true }
realm-compute-cpu = { workspace = true }
realm-compute-gpu = { workspace = true }
realm-metrics = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
log = "0.4"
dirs = "5.0"
tracing = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["console"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "attention"
harness = false
