[package]
name = "realm-models"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Model architectures for Realm.ai (Transformer, Attention, FFN)"

[features]
default = []
cuda = ["realm-compute-gpu/cuda"]
metal = ["realm-compute-gpu/metal"]
webgpu = ["realm-compute-gpu/webgpu", "dep:pollster"]
memory64 = []
download = ["dep:reqwest", "dep:futures-util"]

[dependencies]
realm-core = { workspace = true }
realm-compute-cpu = { workspace = true }
realm-compute-gpu = { workspace = true }
realm-metrics = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
log = "0.4"
dirs = "5.0"
tracing = { workspace = true }
pollster = { version = "0.3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", optional = true, features = ["stream"] }
futures-util = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["console"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "attention"
harness = false
