[package]
name = "realm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WASM orchestrator module for Realm.ai"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[features]
default = []
memory64 = []

[dependencies]
realm-core = { workspace = true }
realm-models = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
web-sys = { workspace = true, features = ["console"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
getrandom = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Ensure getrandom 0.3.x brought by rand 0.9 has the js feature enabled in wasm
getrandom_03_js = { workspace = true }
