[package]
name = "realm-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "WASM orchestrator module for Realm.ai"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int", "--enable-simd"]

[features]
default = ["web"]
web = ["js-sys", "web-sys", "console_error_panic_hook"]
memory64 = []
server = ["tracing", "js-sys", "web-sys"]  # Server mode: still need js-sys/web-sys for wasm-bindgen, but don't use them

[dependencies]
realm-core = { workspace = true }
realm-models = { workspace = true }
realm-compute-cpu = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, features = ["console"], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
getrandom = { workspace = true }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
tracing = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Ensure getrandom 0.3.x brought by rand 0.9 has the js feature enabled in wasm
getrandom_03_js = { workspace = true }
