[package]
name = "memory64-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
realm-core = { path = "../../crates/realm-core" }
realm-models = { path = "../../crates/realm-models", features = ["memory64"] }
realm-runtime = { path = "../../crates/realm-runtime", features = ["memory64", "memory64-host"] }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"

[[bin]]
name = "memory64-demo"
path = "src/main.rs"
