[package]
name = "multi-tenant"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "multi-tenant"
path = "src/main.rs"

[dependencies]
realm-runtime = { workspace = true, features = ["memory64-host"] }
wasmtime = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
