[package]
name = "simple-realm-test"
version.workspace = true
edition.workspace = true

[[bin]]
name = "simple-realm-test"
path = "src/main.rs"

[features]
default = []
memory64 = ["realm-runtime/memory64"]
cuda = ["realm-runtime/cuda"]
metal = ["realm-runtime/metal"]
webgpu = ["realm-runtime/webgpu"]

[dependencies]
realm-runtime = { workspace = true, features = ["memory64-host"] }
wasmtime = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
