[package]
name = "test-gpu-features"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "test-gpu-features"
path = "main.rs"

[dependencies]
realm-compute-gpu = { path = "../../crates/realm-compute-gpu" }
realm-core = { path = "../../crates/realm-core" }
tokio = { version = "1.42", features = ["full"] }
candle-core = { workspace = true }

