[package]
name = "test-webgpu"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "test-webgpu"
path = "main.rs"

[dependencies]
realm-compute-gpu = { path = "../../crates/realm-compute-gpu" }
realm-core = { path = "../../crates/realm-core" }
tokio = { version = "1.42", features = ["full"] }

