[package]
name = "paris-generation"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
realm-runtime = { path = "../../crates/realm-runtime" }
realm-core = { path = "../../crates/realm-core" }
realm-models = { path = "../../crates/realm-models" }
realm-metrics = { path = "../../crates/realm-metrics" }
wasmtime = "38.0.3"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
env_logger = "0.11"
log = "0.4"

[[bin]]
name = "paris-generation"
path = "src/main.rs"
