[package]
name = "paris-native"
version = "0.1.0"
edition = "2021"

[dependencies]
realm-runtime = { path = "../../../crates/realm-runtime" }
realm-core = { path = "../../../crates/realm-core" }
realm-models = { path = "../../../crates/realm-models" }
realm-metrics = { path = "../../../crates/realm-metrics" }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"

[[bin]]
name = "paris-native"
path = "src/main.rs"

